; ModuleID = '/home/carl/AnghaBench/TDengine/src/util/src/extr_ttimer.c_taosTmrStop.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/util/src/extr_ttimer.c_taosTmrStop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@.str = private unnamed_addr constant [30 x i8] c"timer[id=%lld] does not exist\00", align 1
@TIMER_STATE_WAITING = common dso_local global i64 0, align 8
@TIMER_STATE_CANCELED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @taosTmrStop(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = sext i32 %7 to i64
  store i64 %8, i64* %4, align 8
  %9 = load i64, i64* %4, align 8
  %10 = call %struct.TYPE_5__* @findTimer(i64 %9)
  store %struct.TYPE_5__* %10, %struct.TYPE_5__** %5, align 8
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %12 = icmp eq %struct.TYPE_5__* %11, null
  br i1 %12, label %13, label %16

13:                                               ; preds = %1
  %14 = load i64, i64* %4, align 8
  %15 = call i32 @tmrTrace(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0), i64 %14)
  store i32 0, i32* %2, align 4
  br label %31

16:                                               ; preds = %1
  %17 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %18 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %17, i32 0, i32 0
  %19 = load i64, i64* @TIMER_STATE_WAITING, align 8
  %20 = load i32, i32* @TIMER_STATE_CANCELED, align 4
  %21 = call i64 @atomic_val_compare_exchange_8(i32* %18, i64 %19, i32 %20)
  store i64 %21, i64* %6, align 8
  %22 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %23 = load i64, i64* %6, align 8
  %24 = call i32 @doStopTimer(%struct.TYPE_5__* %22, i64 %23)
  %25 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %26 = call i32 @timerDecRef(%struct.TYPE_5__* %25)
  %27 = load i64, i64* %6, align 8
  %28 = load i64, i64* @TIMER_STATE_WAITING, align 8
  %29 = icmp eq i64 %27, %28
  %30 = zext i1 %29 to i32
  store i32 %30, i32* %2, align 4
  br label %31

31:                                               ; preds = %16, %13
  %32 = load i32, i32* %2, align 4
  ret i32 %32
}

declare dso_local %struct.TYPE_5__* @findTimer(i64) #1

declare dso_local i32 @tmrTrace(i8*, i64) #1

declare dso_local i64 @atomic_val_compare_exchange_8(i32*, i64, i32) #1

declare dso_local i32 @doStopTimer(%struct.TYPE_5__*, i64) #1

declare dso_local i32 @timerDecRef(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
